spade-tests/src/snapshots/spade_tests__ports_integration__assigning_ports_to_ports_is_disallowed.snap
---
source: spade-tests/src/ports_integration.rs
---
entity not_allowed(a: &mut (&bool, &bool), b: (&bool, &bool)) -> bool {
    set a = b;
    true
}


error: Can't create a wire of ports
  ┌─ testinput:1:23
  │
1 │ entity not_allowed(a: &mut (&bool, &bool), b: (&bool, &bool)) -> bool {
  │                       ^^^^^^^^^^^^^^^^^^^
  │                       │    │
  │                       │    Because this is a port
  │                       This can't be a wire


